# accrescent

./: .editorconfig  .travis.yml  CODESTYLE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  bors.toml  inspector  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
config/: display.ron  ingame_bindings.ron
src/: main.rs
src/input/: ingame_bindings.rs  mod.rs
src/states/: game.rs  ingame.rs  mod.rs
src/systems/: camera_rotation.rs  fly_movement.rs  mod.rs
