[package]
name = "accrescent"
version = "0.0.0"
authors = ["Logan Magee <mageelog@gmail.com>"]
edition = "2018"
description = "An open-world, modular sandbox game"
readme = "README.md"
repository = "https://github.com/lberrymage/accrescent"
license = "MIT OR Apache-2.0"
keywords = ["amethyst", "game", "voxel", "sandbox"]
categories = ["games"]

[badges.travis-ci]
repository = "lberrymage/accrescent"

[dependencies.amethyst]
version = "0.15.0"
default-features = false

[features]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]

[profile.release]
lto = true
