[package]
name = "accrescent"
version = "0.0.0"
authors = ["Logan Magee <mageelog@gmail.com>"]
edition = "2018"
description = "An open-world, modular sandbox game"
readme = "README.md"
repository = "https://github.com/lberrymage/accrescent"
license = "MIT OR Apache-2.0"
keywords = ["amethyst", "game", "voxel", "sandbox"]
categories = ["games"]

[dependencies]
derive-new = "0.5.8"
lazy_static = "1.4.0"
static_assertions = "1.1.0"

[dependencies.amethyst]
version = "0.15.3"
default-features = false

[dependencies.serde]
version = "1.0.119"
features = ["derive"]

[features]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]

[profile.release]
lto = true
codegen-units = 1
